set up the acceptance test to no longer require selenium. this means we can run the tests on virtually any server as long as it has php installed. downside: cant test ajax stuff

--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -11,9 +11,9 @@
 class_name: WebGuy
 modules:
     enabled:
-        - Selenium2
+        - PhpBrowser
         - WebHelper
+	- Db
     config:
-        Selenium2:
+        PhpBrowser:
            url: 'http://localhost/ord-manager/'
-           browser: firefox
